--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,6 +14,10 @@ body {
     background-color: white;
 }
 
+h1 {
+    font-size: 4rem;
+}
+
 #header {
     /* background-color: #ffb826; */
 /* background-color: rgb(125, 52, 235); */
@@ -51,16 +55,39 @@ background-color: white;
 color: black;
 }
 
+.active {
+    border-bottom: 2px solid white;
+}
+
 #content {
 flex: 1;
-/* margin-top: 50px; */
 }
 
 /* Footer */
 #footer {
     background-color: black;
+    /* color: white;
+    padding: 20px; */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer-element {
+    text-align: center;
+    width: 25%;
     color: white;
     padding: 20px;
+}
+
+#footer a {
+    text-decoration: underline;
+    color: white;
+}
+
+#footer .social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 767px) {
@@ -70,10 +97,22 @@ flex: 1;
     li {
         margin: 0.5rem;
     }
+    h1 {
+        font-size: 3rem;
+    }
+    .footer-element {
+        width: 100%;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     li a {
         font-size: 1rem;
     }
+}
+
+@media screen and (max-width: 1023px) {
+  #content {
+    margin-top: 30px;
+  }
 }
