--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -6,13 +6,9 @@ body {
     background-size: cover;
 }
 
-li:nth-of-type(3) {
-    border-bottom: 2px solid white;
-}
-
 h1 {
     color: white;
-    font-size: 5rem;
+    font-size: 4rem;
     text-align: center;
     /* opacity: 0.7; */
 }
@@ -46,7 +42,7 @@ h1 {
     border: 1px solid black;
   }
   
-  .active, .accordion:hover {
+  .active-dropdown, .accordion:hover {
     background-color: #ccc;
   }
   
@@ -58,7 +54,7 @@ h1 {
     margin-left: 5px;
   }
   
-  .active:after {
+  .active-dropdown:after {
     content: "\2212";
   }
   
@@ -78,21 +74,15 @@ h1 {
       h1 {
           font-size: 3rem;
       }
-    #projects-container {
-        display: block;
-    }
     .projects-child {
-        width: 90%;
+        width: 80%;
         margin: 20px auto;
     }
   }
 
   @media screen and (min-width: 768px) and (max-width: 1023px) {
-      #projects-container {
-          display: block;
-      }
       .projects-child {
-          width: 90%;
+          width: 80%;
           margin: 20px auto;
       }
   }
