--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -59,6 +59,55 @@ color: black;
     border-bottom: 2px solid white;
 }
 
+/* Phone Navigation */
+
+.nav-icon {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    display: none;
+}
+  .overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+  }
+  
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+  }
+  
+  .overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+
 #content {
 flex: 1;
 }
@@ -102,6 +151,22 @@ flex: 1;
     }
     .footer-element {
         width: 100%;
+    }
+    .nav-icon {
+        display: block;
+    }
+    a.active {
+        border: none;
+        text-decoration: underline;
+    }
+    #header ul {
+        display: none;
+    }
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
     }
 }
 
