--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     font-family: 'Lato', sans-serif;
     background-color: white;
+min-height: 100vh;
 }
 
 h1 {
