--- a/assets/css/FAQ.css
+++ b/assets/css/FAQ.css
@@ -3,8 +3,65 @@ body {
     background-position: center;
 }
 
-h1 {
+h1, h2 {
     text-align: center;
     color: white;
 }
+
+h2 {
+    padding-bottom: 50px;
+
+}
+
+#dropdowns {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+  .active-dropdown, .accordion:hover {
+    background-color: #ccc;
+  }
+  
+  .accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active-dropdown:after {
+    content: "\2212";
+  }
+  
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+
+  #content {
+      padding-bottom: 30vh;
+  }
+
+  @media screen and (max-width: 767px) {
+    #dropdowns {
+        width: 90%;
+    }  
+  }
 
