--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../img/About-us-background2.jpg');
+    background-image: url('../img/About-us-background.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -24,6 +24,7 @@ body {
     font-size: 4rem;
     text-align: center;
     opacity: 0.7;
+    color: white;
 }
 
 #about {
