--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+
 html, body {
     height: 100%;
     margin: 0;
@@ -10,7 +12,8 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    font-family: 'Lato', sans-serif;
+    /* font-family: 'Lato', sans-serif; */
+    font-family: 'Didact Gothic', sans-serif;
     background-color: white;
     min-height: 100vh;
     height: auto;
@@ -18,6 +21,7 @@ body {
 
 h1 {
     font-size: 4rem;
+    font-family: 'Lato', sans-serif;
 }
 
 #header {
