A few experiments. Could go horribly wrong.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -50,7 +50,7 @@ margin-right: 10px;
 li a {
 text-decoration: none;
 color: white;
-font-size: 1.3vw;
+/* font-size: 1.3vw; */
 border-radius: 4px;
 padding: 10px;
 }
@@ -115,7 +115,7 @@ color: black;
   }
 
 #content {
-flex: 1;
+    flex: 1;
 }
 
 /* Footer */
@@ -188,14 +188,23 @@ flex: 1;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+/* @media screen and (min-width: 768px) and (max-width: 1023px) {
     li a {
         font-size: 1rem;
     }
-}
+} */
 
 @media screen and (max-width: 1023px) {
   #content {
     margin-top: 30px;
   }
+}
+
+@media screen and (min-width: 2560px) {
+    li a {
+        font-size: 1.5rem;
+    }
+    * {
+        font-size: 2rem;
+    }
 }
