--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,9 +4,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    /* background-position: center;
-    background-repeat: repeat-x; */
-    /* background-size: cover; */
 }
 
 /*Home*/
@@ -40,8 +37,9 @@ body {
     border: none;
     background-clip: padding-box;
     color: #3174ff;
-    width: 200px;
-    height: 50px;
+    width: 10rem;
+    /* height: 50px; */
+    height: 3rem;
     margin: 0 auto;
     border-radius: 10px;
     font-size: 1.1rem;
@@ -62,7 +60,7 @@ body {
 
 /* Description */
 #description {
-    padding: 10px 0;
+    /* padding: 10px 0; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -73,12 +71,8 @@ body {
 .description-element {
     padding: 10px;
     width: 300px;
-    /* height: 300px; */
-    /* background-color: orange; */
     background-color: black;
-    /* background-color: rgb(125, 52, 235); */
     color: white;
-    /* background-color: rgb(52, 161, 235); */
     margin: 10px 10px;
     opacity: 0.7;
 }
@@ -102,4 +96,12 @@ body {
         width: 90%;
         margin: 10px auto;
     }
+}
+
+@media screen and (min-width: 2560px) {
+    .description-element {
+        width: 80%;
+        padding: 50px;
+    }
+
 }
