--- a/assets/css/FAQ.css
+++ b/assets/css/FAQ.css
@@ -27,7 +27,8 @@ h2 {
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 1.1rem;
+    /* font-size: 15px; */
     transition: 0.4s;
   }
   
