nav bar font size

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -203,9 +203,9 @@ color: black;
 
 @media screen and (min-width: 2560px) {
     li a {
-        font-size: 1.5rem;
+        font-size: 1.5rem; 
     }
     * {
-        font-size: 2rem;
+        font-size: 2rem;!important
     }
 }
