--- a/assets/css/FAQ.css
+++ b/assets/css/FAQ.css
@@ -1,6 +1,10 @@
 body {
     background-image: url('../img/FAQ-background.jpg');
-    background-position: center;
+    /* background-position: center; */
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 h1, h2 {
